2003-10-06	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added dpc2rand.sh and dpc2dump.sh tools.
	* Added more information to tl880doc.txt about DPC2 (0x10180,0x10184).
	* Added audio buffer setting code to tl880audio.c.
	* Added some DPC2 init code to tl880init.c.

2003-10-04	Mike Bourgeous		<nitrogen@slimetech.com>

	* Improved cursor test tool (incl. color palette support).
	* Added tltuner/ and tlaudio/ directory for kernel modules modified to
	  work with the TL880 driver.

2003-10-03	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added cursor test to tools/.  Rock on!
	* Change memfd to regfd in example tool.
	* Added some more info about OSD color registers to tl880doc.txt.
	* Added rgb2ypbpr tool.

2003-10-02	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added cursor functions to tl880osd.h.
	* Added example values for some OSD structs to tl880osd.h.

2003-10-01	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added tl880_deallocate_osdmem().
	* Added tl880_init_osdmem().
	* Added some more comments to tl880cursor.c.

2003-09-30	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added tl880_get_osdmem_offset() to tl880cursor.c.
	* Fixed misinformation in myhd_154.txt about getSDRAMoffset.
	* Add tl880osd.c and move some functions from tl880cursor into it.
	* Added tl880_delete_cursor() function.
	* Change all *osd_memory to *osdmem.

2003-09-29	Mike Bourgeous		<nitrogen@slimetech.com>

	* More cleanup work on tl880cursor.c.
	* Added more cJanus info to myhd_154.txt.
	* Added OSD memory list consolidation function.
	* Added some TL880 memory info to tl880doc.txt.

2003-09-23	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added more OSD info to tl880doc.txt.
	* Added tl880cursor.c to driver/.

2003-09-21	Mike Bourgeous		<nitrogen@slimetech.com>

	* Updated README files.
	* Fix bug in tools/dpc/dpcsync.c (10018->0x10018).
	* Added DPC interrupt rate calculation.

2003-09-20	Mike Bourgeous		<nitrogen@slimetech.com>

	* Better flow in tl880_isr_video_sync_dvd in tl880dpc.c.